# mytokenizations

./: LICENSE  README.md  __init__.py  pyproject.toml  recipes.py
output/test/: ALEgeneration_from_abcd.mid  abcd_simple_example.mid  abcd_ussr27.txt  abcd_ussr27_recreated.mid  reltok_dummy_test.mid  reltok_dummy_test_recreated.mid  reltok_ussr27_recreated.mid  ussr27.mid
src/mytokenizations/: __init__.py  abcd.py  constants.py  reltok.py
src/mytokenizations/utils/: __init__.py  complex.py  io.py  mid_related.py
test/: test_tokenizations.py
