[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom_tokenizations"
version = "1.0.0"
description = "Custom tokenizations"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "Burak Sina Akbudak" },
]
keywords = [
    "midi",
    "tokenization",
    "music",
    "mir",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19",
    "symusic>=0.5.0",
    "tqdm",
    "miditok==3.0.5",
]

[project.optional-dependencies]
tests = [
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mytokenizations"]
only-packages = true

[tool.hatch.version]
path = "src/mytokenizations/__init__.py"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
]
omit = [
    # files to omit to check
    "data/*",
    "output/*"
]
